
[TestDiff/creates_migration_file_from_schema_diff - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts.up.sql ###
-- migration: 20240115123045_add_posts.up.sql
-- generated by conduit via pg-schema-diff from /testdir/schema.sql

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);
### conduit.sum ###
a1876bffea260abf


---

[TestDiffSplitsMigrations/splits_into_tx_and_non-tx_migration_files - 1]
### 20230601120000_init.up.sql ###
CREATE TABLE users (id int);
### 20240115123045_add_posts_1.up.sql ###
-- migration: 20240115123045_add_posts_1.up.sql
-- generated by conduit via pg-schema-diff from /testdir/schema.sql

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);
### 20240115123045_add_posts_2.up.sql ###
-- migration: 20240115123045_add_posts_2.up.sql
-- generated by conduit via pg-schema-diff from /testdir/schema.sql

---- disable-tx ----

CREATE INDEX CONCURRENTLY idx_posts_user_id ON public.posts USING btree (user_id);
### conduit.sum ###
47a8c2b78738c610


---
